# iocsearcher

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
iocsearcher/: __main__.py  doc_base.py  doc_common.py  doc_ehtml.py  doc_epdf.py  doc_html.py  doc_pdf.py  doc_word.py  document.py  ioc.py  searcher.py
iocsearcher/data/: iana_schemes.txt  patterns.ini  tlds-alpha-by-domain.txt
tests/: arn_valid.ioc  blockchain_valid.ioc  onion_valid.ioc  registry_valid.ioc
